--- a/rt.csproj
+++ b/rt.csproj
@@ -7,8 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Win32.SystemEvents" Version="8.0.0-rc.2.23479.6" />
-      <PackageReference Include="SkiaSharp" Version="3.119.1" />
+        <PackageReference Include="Microsoft.Win32.SystemEvents" Version="8.0.0-rc.2.23479.6"/>
+        <PackageReference Include="SkiaSharp" Version="3.119.1"/>
+        <PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="3.119.1"/>
     </ItemGroup>
 
 </Project>
